Solve Horizontal Scrolling issue for mobiles

--- a/Css/home.css
+++ b/Css/home.css
@@ -5,6 +5,7 @@ body {
     line-height: 3rem;
     color: #6e6e6e;
     margin: 0px;
+    overflow-x: hidden;
 }
 
 .background {
